# pytorch-pixel-segmentation

./: .gitignore  README.md  basic_fcn.py  download.py  pyproject.toml  runall.sh  temp.py  test.py  train.py  util.py  visualize.ipynb  voc.py
darrennet/: basic_fcn.py  constants.py  darren.py  dataset.py  erfnet.py  erfnet_imagenet.py  main.py  paths.py  resnet.py  theme.py  train.py  unet.py  unet_resnet.py  util.py  voc.py
writeup/: neurips_2023.sty  references.bib  writeup.aux  writeup.bbl  writeup.bcf  writeup.bib  writeup.blg  writeup.fdb_latexmk  writeup.fls  writeup.out  writeup.run.xml  writeup.tex
writeup/sections/: abstract.tex  contributions.tex  discussion.tex  intro.tex  methods.tex  references.tex  related.tex  results.tex
